Tue, 26 Feb 2008 16:49:06 +0100 <thp@perli.net>
Python code fixup: Compare "None" with "is" instead of "=="

	* doc/dev/daap2rss.py: "== None" => "is None"
	* src/gpodder/config.py: "== None" => "is None"
	* src/gpodder/gui.py: "== None" => "is None"
	* src/gpodder/libgpodder.py: "== None" => "is None"
	* src/gpodder/libpodcasts.py: "== None" => "is None"

Tue, 26 Feb 2008 16:30:56 +0100 <thp@perli.net>
Add support for new "bluetooth-sendto" utility

	* README: Ask for either "gnome-obex-send" or "bluetooth-sendto",
	which are needed for the Bluetooth file transfer
	* src/gpodder/util.py: Add support for "bluetooth-sendto" as an
	alternative to "gnome-obex-send"; initial bug report and patch by
	Leonid Ponomarev (this probably adds bluez-gnome as an optional
	dependency if you want bluetooth send support)

Mon, 25 Feb 2008 15:51:16 +0100 <thp@perli.net>
Show more description text in episode list

	* src/gpodder/libpodcasts.py: Join all lines and strip unnecessary
	data for the episode description that is displayed in the episode list
	when descriptions are enabled (suggested by Jérôme Chabod)

Mon, 25 Feb 2008 14:39:15 +0100 <thp@perli.net>
Merge changes from 0.11.0 release after release

	* bin/gpodder: Merge changes from 0.11.0
	* README: Merge changes from 0.11.0

Sun, 24 Feb 2008 14:52:04 +0100 <thp@perli.net>
Cosmetic changes to the makefile

	* Makefile: Cosmetic changes

Sun, 24 Feb 2008 13:55:42 +0100 <thp@perli.net>
Cairo-based progress bar on system tray icon

	* src/gpodder/draw.py: Add Cairo-based drawing code for generating a
	nice, transparent progress bar icon
	* src/gpodder/services.py: Fix a problem with the wrong download done
	percentage (i.e. when cancelling downloads instead of finishing them)
	* src/gpodder/trayicon.py: Add code to draw the progress bar on the
	tray icon; initial idea and most parts of this patch by Jérôme Chabod

Sat, 23 Feb 2008 14:18:53 +0100 <thp@perli.net>
Set the xterm title when running "make test"
